force-app/main/default/objects/Partner_Management__c/Partner_Management__c.object-meta.xml
<CustomObject>
    <label>Partner Management</label>
    <nameField>
        <label>Partner Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>