force-app/main/default/objects/Partner_Management__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <label>Actual (Value of Pipeline)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>