force-app/main/default/objects/Partner_Management__c/fields/Actual_Count_of_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Actual_Count_of_Pipeline__c</fullName>
    <label>Actual (Count of Pipeline)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>