force-app/main/default/objects/Partner_Management__c/fields/Lookup_field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_field__c</fullName>
    <formula>Partner_Oppty__r.Opportunity_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>