force-app/main/default/objects/Partner_Management__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan 2020</fullName>
            </value>
            <value>
                <fullName>Feb 2020</fullName>
            </value>
            <value>
                <fullName>Mar 2020</fullName>
            </value>
            <value>
                <fullName>Apr 2020</fullName>
            </value>
            <value>
                <fullName>May 2020</fullName>
            </value>
            <value>
                <fullName>Jun 2020</fullName>
            </value>
            <value>
                <fullName>Jul 2020</fullName>
            </value>
            <value>
                <fullName>Aug 2020</fullName>
            </value>
            <value>
                <fullName>Sep 2020</fullName>
            </value>
            <value>
                <fullName>Oct 2020</fullName>
            </value>
            <value>
                <fullName>Nov 2020</fullName>
            </value>
            <value>
                <fullName>Dec 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>