force-app/main/default/objects/Partner_Management__c/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Attributed</fullName>
            </value>
            <value>
                <fullName>Rep Attributed</fullName>
            </value>
            <value>
                <fullName>Partner Team Attributed</fullName>
            </value>
            <value>
                <fullName>Partner Resell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>