force-app/main/default/objects/Partner_Management__c/fields/Partner_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Partner_Oppty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner + Oppty</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partner Management</relationshipLabel>
    <relationshipName>Partner_Management</relationshipName>
    <type>Lookup</type>
</CustomField>