force-app/main/default/objects/Partner_Management__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <label>Quota (Value of Pipeline)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>