force-app/main/default/objects/Partner_Management__c/fields/Quota_Count__c.field-meta.xml
<CustomField>
    <fullName>Quota_Count__c</fullName>
    <label>Quota (Count of Pipeline)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>